// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute price endpoint rest should return success 1`] = `
{
  "data": {
    "result": 7343.84,
  },
  "result": 7343.84,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute price endpoint websocket should return success 1`] = `
{
  "data": {
    "result": 170,
  },
  "result": 170,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1668165071111,
    "providerDataStreamEstablishedUnixMs": 1668165071111,
  },
}
`;
